[package]
name = "pong"
version = "0.1.0"
edition = "2024"

# Remove dynamic linking on release otherwise will require dependencies on release
[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking" ] }
# Enable the below for increase performance on release
# log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
